i2psnark:   - Update session options when max bandwidth changes   - BufferedStream cleanup and comments   - torrent name display tweak   - findbugs